syntax = "proto3";
package inventory;

option go_package = "github.com/immxrtalbeast/order_microservices/internal/protos/gen/go/inventory";

service Inventory {
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
    rpc ReserveItems (ReserveItemsRequest) returns (ReserveItemsResponse);
    rpc AddGood (AddGoodRequest) returns (AddGoodResponse);
    rpc DeleteGood (DeleteGoodRequest) returns (DeleteGoodResponse);
    rpc UpdateGood (UpdateGoodRequest) returns (UpdateGoodResponse);
}


message ListProductsRequest{}

message Product {
    string id = 1;
    string name = 2;
    string category = 3;
    string image_link = 4;
    string description = 5;
    double price = 6;
    int32 volume = 7;
    int64 quantity_in_stock = 8;
}

message ListProductsResponse {
    repeated Product products = 1;
}

message ReserveItem {
    int64 product_id = 1;
    int64 quantity = 2;
}

message ReserveItemsRequest {
    int64 order_id = 1;
    repeated ReserveItem items = 2;
}

message ReserveItemsResponse {
    bool success = 1;
    // int64 reservation_id = 2;  // Уникальный ID резервации
    int64 total_order_sum = 2;
}

message AddGoodRequest {
    string name = 1;
    string category = 2;
    string image_link = 3;
    string description = 4;
    double price = 5;
    int32 volume = 6;
    int64 quantity_in_stock = 7;
}

message AddGoodResponse{
    bool success = 1;
}

message DeleteGoodRequest{
    string good_id = 1;
}

message DeleteGoodResponse{
    bool success = 1;
}

message UpdateGoodRequest{
    string id = 1;
    string name = 2;
    string category = 3;
    string image_link = 4;
    string description = 5;
    double price = 6;
    int32 volume = 7;
    int64 quantity_in_stock = 8;
}

message UpdateGoodResponse{
    bool success = 1;
}